some unknown changes

--- a/Talk5/Seminar-Arbeit.tex
+++ b/Talk5/Seminar-Arbeit.tex
@@ -246,15 +246,24 @@ If a hard-drive gets too full, the versioning systems keeps track of the oldest 
 \subsection{Dropbox} % @Andri :D
 
 \textbf{Type of Distribution}
+Available through their website but GUI application also exists.
 \textbf{Payment Scheme}
+Freemium, base use is free, for more storage, a paid subscription is available.
 \textbf{Source code availability}
+Closed source
 \textbf{Peering Scheme}
+Data is stored in the Amazon S3 cloud.
 \textbf{Encryption}
+Data is encrypted but keys are stored on dropbox servers, not on client machines
 \textbf{Trust & Integrity}
 \textbf{User base}
+many
 \textbf{Fairness}
+not applicable
 \textbf{Fault-tolerance and Availability}
+bö
 \textbf{Status}
+
 
 \section{Summary and Conclusions} In this section, we provide a summary about the topics mentioned above and draw conclusions about the current state of the available P2P file storage systems and what the future could hold for P2P file storage.
 
