--- a/Talk5/Seminar-Arbeit.tex
+++ b/Talk5/Seminar-Arbeit.tex
@@ -141,7 +141,7 @@ Storj uses different so called heartbeats to check whether a file is correctly s
 
 But what happens if a malicious farmer knows the decryption key of a specific file? He won't be able to complete the audits (heartbeats) for all shards since he isn't assigned to all of them. In addition this leads to the prove of redundancy of particular shards which means that each copy of a shard is unique \cite{storj:PDF}.
 
-\textbf{User base:} There are no official data, in addition the system is currently in beta-phase. The forum of Storj has over one thousand members \cite{storj:forum} and lets assume that there are currently even more storj users.
+\textbf{User base:} There are no official up-to-date data, in addition the system is currently in beta-phase. The forum of Storj has over one thousand members \cite{storj:forum} and lets assume that there are currently even more storj users. In June 2014 Storj had about more than 3'000 users \cite{storj:crowdsale}.
 
 \textbf{Fairness:} Storj has no central devices and through the \textit{Proof-of-Redundancy} it is guaranteed that the files are evenly distributed. Also prices can vary on the base of bandwidth speed and location of the peer and type of hardware provided \cite{storj:PDF}.
 
@@ -322,10 +322,15 @@ If a hard-drive gets too full, the versioning systems keeps track of the oldest 
 		\url{http://blog.storj.io/post/87251450053/what-is-storj},
 		March, 2015.
 		
-	\bibitem {storj:crowdsale}
+	\bibitem {storj:deck}
 		\emph{Storj - The Crowdsale;}
 		\url{http://storj.io/crowdsale.html},
 		March, 2015.
+		
+	\bibitem {storj:crowdsale}
+		\emph{Storj Deck - Decentralized Cloud;}
+		\url{http://storj.io/Deck.pdf},
+		April, 2015.
 
 	\bibitem {storj:github}
 		\emph{Storj Labs;}
