--- a/Talk5/Seminar-Arbeit.tex
+++ b/Talk5/Seminar-Arbeit.tex
@@ -21,10 +21,11 @@ In general, the existing file synchronization and storage systems can be categor
 
 This seminar thesis aims to give an overview over the current available P2P file storage systems, to categorize them according to their different aspects and to compare their assets and drawbacks. The findings will also be compared to a popular distributed file storage system.
 
-% in chapter xyz we show abc ..
+In chapter \ref{sec:background} we want to give a short overview  of the background of peer-to-peer systems including historical aspects, manly predecessor approaches of file storage solutions. Chapter \ref{sec:approach}
 
 \section{Background} % @Josua
-This section gives a short basic overview over the most important topics concerning P2P systems, file storage, and the special requirements of P2P file storage systems compared to those of traditional and distributed file storage.
+\label{sec:background}
+This section gives a short basic overview over the most important topics concerning P2P systems, file storage, and the special requirements of P2P file storage systems compared to those of traditional and distributed file storage. In the a summary of the most common drawbacks of these previous but still used systems compared to peer-to-peer systems is shown.
 
 \subsection{File Storage}
 According to The Free Dictionary\cite{thefreedictionary} the term 'file storage' describes:
@@ -96,6 +97,7 @@ Peer-to-peer networks often lack of having enough peers continuously connected t
     no version control, no conflict management
 
 \section{Approach} % @Simon
+\ref{sec:approach}
 This section describes the criteria we chose to classify the different file storage systems. The criteria were chosen to fit what we feel are the most important aspect that a prospective user considers before making the decision of which file storage system to use. The following criteria were chosen for classification and a justification for each choice is given.
 
 \subsection{Criteria}
@@ -262,7 +264,8 @@ If a hard-drive gets too full, the versioning systems keeps track of the oldest 
 
 \textbf{Status:} Available for use and costs-free.
 
-\subsection{Dropbox} % @Andri :D
+\subsection{Dropbox}
+% userbase: http://thenextweb.com/insider/2014/05/29/dropbox-reaches-300m-users-adding-100m-users-just-six-months/	
 
 \textbf{Type of Distribution}
 Available through their website but GUI application also exists.
@@ -442,5 +445,5 @@ bö
 		\emph{A Definition of Peer-to-Peer Networking for the Classification of Peer-to- Peer Architectures and Applications;}
 		\url{http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=990434&tag=1},
 		April, 2015.
-		
+
 \end{thebibliography}
