--- a/Talk5/Seminar-Arbeit.tex
+++ b/Talk5/Seminar-Arbeit.tex
@@ -257,6 +257,8 @@ There are three different types of storage for the AeroFS Team Server:
 \end{enumerate}
 If a hard-drive gets too full, the versioning systems keeps track of the oldest copies and deletes them if the user runs out of space \cite{aerofs:USTO.RE}.
 
+%%https://www.aerofs.com/developers/ --> load balancer
+
 \textbf{Fault-tolerance and Availability:} 
 % research needed
 
